# todo_app_containerized

./: Notes_AWS Deployment.md  Notes_AWS_Deployment.md  Readme.md  compose.yaml  docker-compose.yml
api/: Dockerfile  pyproject.toml  requirements.txt
api/api/: Dockerfile  api.py
api/scripts/: run.sh
todo_app/: pyproject.toml
ui/: Dockerfile  Dockerfile.logging_ui  requirements.txt  requirements2.txt  requirements_logging.txt
ui/logging_ui/: main.py
ui/ui/: app.py  cssStyles.py  db_actions.py  main.py  todos.py  ui.py
