[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["RaaidK47 <raaid.khan47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
streamlit = "^1.34.0"
psycopg2 = "^2.9.9"
termcolor = "^2.4.0"
pytest = "^8.2.0"
sqlmodel = "^0.0.18"
databases = "^0.9.0"
asyncpg = "^0.29.0"
configparser = "^7.0.0"
streamlit-authenticator = "^0.3.2"
fastapi-login = "^1.10.0"
st-pages = "^0.4.5"
st-login-form = "^0.2.2"
streamlit-extras = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
